	  	  bool isCalibratingSkeleton(int user)					- check if its in the state of calibrating
		  void setSmoothingSkeleton(float factor)				- set the smoothing factor for the skeleton
		  
		  See further info on this thread:
		  http://groups.google.com/group/openni-dev/browse_thread/thread/f3def5f642802ec0/1bafdb1c8570bc70?lnk=gst&q=Save++Calibration#1bafdb1c8570bc70
		- Extended the CMakeList.txt, now there should be a messages if you didn't setup
		  the environment variables(for linux)
		- Added Eigen(http://eigen.tuxfamily.org) as library dependency for the build 
		  process. Eigen is a 3d Math Template Library.
	
v0.14 alpha, 03/11/2011
	New:
		- Added some functions for the scene analyser and user:
		int[] 	sceneMap()					-	returns the hole scene map
		int[] 	getUsersPixels(int user)	-	returns the sceneMap for a user(only if user is enabled)
		int		getNumberOfUsers()			-	returns current count of users
		boolean	getCoM(int user,PVector com)-	returns the center of mass for a user
		- Added new example:
			SimpleOpenNI_UserScene3d	
				Shows how to get scene data for users
		- Fixed a bug in 'convertRealWorldToProjective'

v0.13 alpha, 03/06/2011
	New:
		- Created an installer for osx, but just for testing purpose
		- Removed the dependency from the xml init.file, added function, the normal enable... functions
		  still work, they just use the default values:
			init(PApplet parent)
			enableDepth(int width,int height,int fps)
			enableRGB(int width,int height,int fps)
			enableIR(int width,int height,int fps)
			enableScene(int width,int height,int fps)
		  Not all width/height/fps combinations are possible, depends on the hardware!!!
		- Added record + save ability
			enableRecorder(int recordMedium,String filePath)
			addNodeToRecording(int nodeType,int compression)
			removeNodeFromRecording(int nodeType)
			openFileRecording(String filePath)
		  Still have to test how this works with the User/Hands/Gesture.